--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,30 +1,25 @@
-status = warn
+name=PropertiesConfig
+property.filename = logs
+appenders = console, file
 logging.pattern.console=
+
 appender.console.type = Console
-appender.console.name = LogToConsole
+appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-# Rotate log file  
-appender.rolling.type = RollingFile
-appender.rolling.name = LogToRollingFile
-appender.rolling.fileName = C://GitFocusLogs//GitFocus-Service.log
-appender.rolling.filePattern = logs/$${date:yyyy-MM}/app-%d{MM-dd-yyyy}-%i.log.gz
-appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
-appender.rolling.policies.type = Policies
-appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=10MB
-appender.rolling.strategy.type = DefaultRolloverStrategy
-appender.rolling.strategy.max = 10
+appender.file.type = File
+appender.file.name = LOGFILE
+appender.file.fileName=C://GitFocusLogs//GitFocus-Service.log
+appender.file.layout.type=PatternLayout
+appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-# Log to console and rolling file
-logger.app.name = com.gitfocus
-logger.app.level = debug
-logger.app.additivity = false
-logger.app.appenderRef.rolling.ref = LogToRollingFile
-logger.app.appenderRef.console.ref = LogToConsole
+loggers=file
+logger.file.name=com.gitfocus
+logger.file.level = debug
+logger.file.appenderRefs = file
+logger.file.appenderRef.file.ref = LOGFILE
 
-rootLogger.level = info
-rootLogger.appenderRef.stdout.ref = LogToConsole
+rootLogger.level = debug
+rootLogger.appenderRefs = stdout
+rootLogger.appenderRef.stdout.ref = STDOUT
