--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/GitFocus
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://ec2-13-126-135-17.ap-south-1.compute.amazonaws.com:5432/postgres
+spring.datasource.username=Daguser
+spring.datasource.password=Dag*123
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -12,3 +12,17 @@ spring.jpa.hibernate.ddl-auto = none
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.show-sql=false
+
+server.port=8888
+#keycloak.enabled=false
+#keycloak.auth-server-url=http://localhost:8080/auth
+#keycloak.realm=DAG
+#keycloak.resource=GitFocus
+#keycloak.public-client=true
+#keycloak.ssl-required=external
+#keycloak.cors=true
+#keycloak.enable-basic-auth=true
+#keycloak.bearer-only=true
+#keycloak.securityConstraints[0].authRoles[0]=User
+#keycloak.securityConstraints[0].securityCollections[0].name=protected
+#keycloak.securityConstraints[0].securityCollections[0].patterns[0]=/*
