--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-spring.datasource.url=jdbc:postgresql://ec2-13-126-135-17.ap-south-1.compute.amazonaws.com:5432/postgres
-spring.datasource.username=Daguser
-spring.datasource.password=Dag*123
+#spring.datasource.url=jdbc:postgresql://ec2-13-126-135-17.ap-south-1.compute.amazonaws.com:5432/postgres
+#spring.datasource.username=Daguser
+#spring.datasource.password=Dag*123
+spring.datasource.url=jdbc:postgresql://localhost:5432/GitFocus
+spring.datasource.username=postgres
+spring.datasource.password=root
+
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
