--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.gitfocus</groupId>
 	<artifactId>GitFocus-Service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>GitFocus-Application</name>
 	<description>GitFocus-Service</description>
 
