--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,6 @@
 pipeline {
   environment {
-    registry = "vanigamimages/user-administration"
+    registry = "gitfocusimages/gitfocus"
     registryCredential = 'dockerhub'
     dockerImage = ''
   }
@@ -21,50 +21,7 @@ pipeline {
       steps {
 	    sh "mvn -Dmaven.test.skip=true clean install" 
       }  
-    }
-    stage ("Code Analysis") {
-      steps {
-	    withSonarQubeEnv('SonarQube') {
-	         sh "mvn sonar:sonar -Dsonar.projectKey=user_administration" 
-	    }
-      }	   
-    }
-
-    stage("Quality Check"){
-      steps{
-	     script{
-      			def qualitygate = waitForQualityGate()
-      			if (qualitygate.status != "OK") {
-         		error "Pipeline aborted due to quality gate coverage failure: ${qualitygate.status}"
-			}
-	     	    }
-           }
-    }
-	  
-    stage('Building Image') {
-      steps {
-        script {
-          //dockerImage = docker.build registry + ":$BUILD_NUMBER"
-          dockerImage = docker.build registry + ":latest"
-        }
-      }
-    }
-    stage('Deploy Image') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-          dockerImage.push()
-        }
-      }
-      }
-    }
-    stage('Remove Unused docker image') {
-      steps{
-        //sh "docker rmi $registry:$BUILD_NUMBER"
-	    sh "docker rmi $registry:latest"
-      }
-    }
-  }
+    }   
   post {
     always {
       cleanWs()
