--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,5 +22,12 @@ pipeline {
 	    sh "mvn -Dmaven.test.skip=true clean install" 
       }  
     }  
-}
+   }
+   stage ("Code Analysis") {
+      steps {
+	    withSonarQubeEnv('SonarQube') {
+	         sh "mvn sonar:sonar -Dsonar.projectKey="GitFocus-Service" 
+	    }
+      }	   
+    }
 }
