--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,8 +26,8 @@ pipeline {
    stage ("Code Analysis") {
       steps {
 	    withSonarQubeEnv('SonarQube') {
-	         sh "mvn sonar:sonar -Dsonar.projectKey="GitFocus-Service"
-           }
+	         sh "mvn sonar:sonar -Dsonar.projectKey=GitFocus-Service"
+		 }
      }
      }
 }
