--- a/JenkinsFile
+++ b/JenkinsFile
@@ -30,5 +30,15 @@ pipeline {
 		 }
      }
    }
+   stage("Quality Check"){
+      steps{
+	     script{
+      			def qualitygate = waitForQualityGate()
+      			if (qualitygate.status != "OK") {
+         		error "Pipeline aborted due to quality gate coverage failure: ${qualitygate.status}"
+			}
+	     	    }
+           }
+    }
   }
 }
