--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   environment {
-    registry = "gitfocusimages/gitfocus"
-    registryCredential = 'dockerhub'
+    registry = "priya2802/gitfocus_service_kube"
+    registryCredential = 'GitFocus-DockerHub'
     dockerImage = ''
   }
   agent any
@@ -39,6 +39,14 @@ pipeline {
 			}
 	     	    }
            }
+    }    
+    stage('Building Image') {
+      steps {
+        script {
+          //dockerImage = docker.build registry + ":$BUILD_NUMBER"
+          dockerImage = docker.build registry + ":latest"
+        }
+      }
     }
   }
 }
