--- a/JenkinsFile
+++ b/JenkinsFile
@@ -44,7 +44,7 @@ pipeline {
       steps {
         script {
           //dockerImage = docker.build registry + ":$BUILD_NUMBER"
-          dockerImage = docker.build registry + ":latest"
+          dockerImage = docker.build registry + ":1.1"
         }
       }
     }
