--- a/JenkinsFile
+++ b/JenkinsFile
@@ -48,5 +48,14 @@ pipeline {
         }
       }
     }
+    stage('Deploy Image') {
+      steps{
+        script {
+          docker.withRegistry( '', registryCredential ) {
+          dockerImage.push()
+        }
+      }
+      }
+    }
   }
 }
