--- a/JenkinsFile
+++ b/JenkinsFile
@@ -43,8 +43,8 @@ pipeline {
     stage('Building Image') {
       steps {
         script {
-          //dockerImage = docker.build registry + ":$BUILD_NUMBER"
-          dockerImage = docker.build registry + ":1.1"
+          dockerImage = docker.build registry + ":$BUILD_NUMBER"
+          //dockerImage = docker.build registry + ":1.1"
         }
       }
     }
