--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,58 +4,16 @@ pipeline {
     registryCredential = 'GITFocus-DockerHub'
     dockerImage = ''
   }
-  agent any
-  tools { 
-    maven 'maven 3.6.3' 
-  }	
-  /*
-  agent {
-    docker {
-    image "maven:3.6.0-jdk-13"
-    args "-v /tmp/maven:/root/.m2"
-    }
-  }
-  */
-  stages {
-    stage ("Building Jar") {
-      steps {
-	    sh "mvn -Dmaven.test.skip=true clean install" 
-      }  
-    }  
-   
-   stage ("Code Analysis") {
-      steps {
-	    withSonarQubeEnv('SonarQube') {
-	         sh "mvn sonar:sonar -Dsonar.projectKey=GitFocus-Service"
-		 }
-     }
+   agent any
+   tools { 
+     maven 'maven 3.6.3' 
    }
-   stage("Quality Check"){
-      steps{
-	     script{
-      			def qualitygate = waitForQualityGate()
-      			if (qualitygate.status != "OK") {
-         		error "Pipeline aborted due to quality gate coverage failure: ${qualitygate.status}"
-			}
-	     	    }
-           }
-    }    
-    stage('Building Image') {
-      steps {
-        script {
-          dockerImage = docker.build registry + ":$BUILD_NUMBER"
-          //dockerImage = docker.build registry + ":1.1"
-        }
-      }
+   
+    stage('Deploy to Kubernetes'){
+        steps{
+         	sh "ssh ubuntu@ec2-13-232-156-182.ap-south-1.compute.amazonaws.com"
+            sh 'kubectl apply -f deployment.yml'
+       }
     }
-    stage('Deploy Image') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-          dockerImage.push()
-        }
-      }
-      }
-    }
-  }
+   	
 }
