--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-#spring.datasource.url=jdbc:postgresql://ec2-13-126-135-17.ap-south-1.compute.amazonaws.com:5432/postgres
-#spring.datasource.username=Daguser
-#spring.datasource.password=Dag*123
-spring.datasource.url=jdbc:postgresql://localhost:5432/GitFocus
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://13.234.254.213:5432/postgres
+spring.datasource.username=Daguser
+spring.datasource.password=Dag*123
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/GitFocus
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -18,6 +19,9 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.show-sql=false
 
 server.port=8888
+
+spring.profiles.active=@activatedProperties@
+
 #keycloak.enabled=false
 #keycloak.auth-server-url=http://localhost:8080/auth
 #keycloak.realm=DAG
