--- a/values-dev.yaml
+++ b/values-dev.yaml
@@ -1,9 +1,9 @@
-# Default values for springprofile.
+# Default values for gitfocus.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-appName: springprofile
+appName: gitfocus
 
 image:
   repository: psmsenthilkumar/gitfocus
