--- a/ALB/gitfocus-alb-ingress1.yaml
+++ b/ALB/gitfocus-alb-ingress1.yaml
@@ -1,8 +1,8 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: "gitfocus-alb-ingress"
-  namespace: "gitfocus-alb-ns"
+  namespace: "gitfocus-ns"
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
