--- a/gitfocus-alb-service.yaml
+++ b/gitfocus-alb-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "gitfocus-service"
-  namespace: "gitfocus-ns"
+  namespace: "gitfocus-ns1"
 spec:
   ports:
     - port: 4041
