--- a/gitfocus-alb-ingress.yaml
+++ b/gitfocus-alb-ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: "gitfocus-ingress"
+  name: "gitfocus-alb-ingress-ingress"
   namespace: "gitfocus-ns1"
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
   labels:
-    app: gitfocus-ingress
+    app: gitfocus-alb-ingress-ingress
 spec:
   rules:
     - http:
         paths:
           - path: /*
             backend: 
-              serviceName: "gitfocus-service"
+              serviceName: "gitfocus-alb-ingress-service"
               servicePort: 4041
