--- a/gitfocus-alb-service.yaml
+++ b/gitfocus-alb-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "gitfocus-service"
+  name: "gitfocus-alb-ingress-service"
   namespace: "gitfocus-ns1"
 spec:
   ports:
