--- a/gitfocus-alb-ingress.yaml
+++ b/gitfocus-alb-ingress.yaml
@@ -1,13 +1,13 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: "gitfocus-alb-ingress-ingress"
-  namespace: "gitfocus-ns1"
+  name: "gitfocus-alb-ingress"
+  namespace: "gitfocus-alb-ns"
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
   labels:
-    app: gitfocus-alb-ingress-ingress
+    app: gitfocus-alb-ingress
 spec:
   rules:
     - http:
